syntax = "proto3";
package bluzelle.curium.tax;

import "gogoproto/gogo.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bluzelle/bluzelle-public/curium/x/tax/types";

// GenesisState defines the tax module's genesis state.
message GenesisState {
  int64 gasTaxBp = 1;
  int64 transferTaxBp = 2;
  string taxCollector = 3;

  // this line is used by starport scaffolding # genesis/proto/state
}
